# social-agentic-crew-ai

./: .env.example  .gitignore  AGENTS.md  README.md  __init__.py  curl.md  fresh-todo.md  main.py  pyproject.toml  run_full_workflow.py  test_pdf_step.py  verify_project.py
agents/: __init__.py  publisher_agent.py  research_agent.py  writer_agent.py
api/: routes.py
frontend/: index.html  styles.css
models/: database.py  schemas.py
tools/: pdf_generator.py
utils/: __init__.py  llm_setup.py  rate_limiter.py
workflows/: linkedin_workflow.py
